# stm8emulator

./: .gitignore  CMakeLists.txt  README.md
include/: console.h  device.h  io.h  run.h
src/: console.c  device.c  io.c  main.c  run.c
src/include/: console.h  io.h
tests/: build_tests.cmake  main.c  parse_cli_args_test.c  read_file_test.c
tests/test_files/: test_file1.txt
